# openstack-armada-app

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  centos_helm.inc  centos_pkg_dirs  centos_pkg_dirs_containers  centos_tarball-dl.lst  debian_iso_image.inc  debian_pkg_dirs  debian_stable_docker_images.inc  debian_trixie_pkg_dirs_std  helm-charts-release-info.inc  test-requirements.txt  tox.ini
enhanced-policies/: README.md  cinder-policy-overrides.yml  glance-policy-overrides.yml  horizon-nova-policy-overrides.yml  horizon-policy-overrides.yml  keystone-policy-overrides.yml  neutron-policy-overrides.yml  nova-policy-overrides.yml  test-requirements.txt  tox.ini
enhanced-policies/tests/: conftest.py  fv_rbac.py  rbac_test_base.py  run-cleanup-all.sh
ingress-nginx-helm/debian/: meta_data.yaml
openstack-helm-infra/centos/: build_srpm.data  openstack-helm-infra.spec
openstack-helm-infra/debian/: dl_hook  meta_data.yaml
openstack-helm-infra/files/: 0001-Allow-multiple-containers-per-daemonset-pod.patch  0001-gnocchi-chart-updates.patch  0001-gnocchi-remove-gnocchi-upgrade-option-and-set-coordi.patch  0002-Add-imagePullSecrets-in-service-account.patch  0002-Revert-Helm-Toolkit-Move-sensitive-config-data-to-se.patch  0003-Revert-gnocchi-use-of-k8s-secret-to-store-config.patch  0003-Set-Min-NGINX-handles.patch  0004-Allow-multiple-containers-per-daemonset-pod.patch  0004-Enable-Ceph-Jewel-support-for-gnocchi.patch  0004-Partial-revert-of-31e3469d28858d7b5eb6355e88b6f49fd6.patch  0005-Add-TLS-support-for-Gnocchi-public-endpoint.patch  0005-Add-a-configmap-for-ingress-controller-config.patch  0005-Partial-revert-of-31e3469d28858d7b5eb6355e88b6f49fd6.patch  0006-Add-TLS-support-for-Gnocchi-public-endpoint.patch  0006-Set-Min-NGINX-handles.patch  0007-Add-io_thread_pool-for-rabbitmq.patch  0007-Fix-pod-restarts-on-all-workers-when-worker-added-re.patch  0008-Add-io_thread_pool-for-rabbitmq.patch  0008-Enable-override-of-rabbitmq-probe-parameters.patch  0008-Fix-rabbitmq-could-not-bind-port-to-ipv6-address-iss.patch  0009-Enable-override-of-mariadb-server-probe-parameters.patch  0009-Enable-override-of-rabbitmq-probe-parameters.patch  0009-Fix-ipv6-address-issue-causing-mariadb-ingress-not-ready.patch  0012-Add-tolerations-to-rabbitmq-chart.patch  (+18 more)
python-k8sapp-openstack/k8sapp_openstack/: README.rst  pylint.rc  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  upper-constraints.txt
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/: utils.py
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/armada/: manifest_openstack.py
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/common/: constants.py
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/helm/: aodh.py  barbican.py  ceilometer.py  cinder.py  dcdbsync.py  fm_rest_api.py  garbd.py  glance.py  gnocchi.py  heat.py  helm_toolkit.py  horizon.py  ingress.py  ironic.py  keystone.py  keystone_api_proxy.py  libvirt.py  magnum.py  mariadb.py  memcached.py  neutron.py  nginx_ports_control.py  nova.py  nova_api_proxy.py  openstack.py  openvswitch.py  panko.py  pci_irq_affinity_agent.py  placement.py  psp_rolebinding.py  rabbitmq.py  swift.py
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/kustomize/: __init__.py  kustomize_openstack.py
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/lifecycle/: lifecycle_openstack.py
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/tests/: test_cinder.py  test_nova.py  test_nova_api_proxy.py  test_openstack.py  test_plugins.py
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/tests/helm/: test_aodh.py  test_barbican.py  test_ceilometer.py  test_cinder.py  test_fm_rest_api.py  test_glance.py  test_gnocchi.py  test_heat.py  test_horizon.py  test_ironic.py  test_keystone.py  test_keystone_api_proxy.py  test_neutron.py  test_nova.py  test_nova_api_proxy.py  test_openstack.py  test_placement.py
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/tests/lifecycle/: test_lifecycle_openstack.py
python-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/tests/utils/: test_utils.py
python3-k8sapp-openstack/k8sapp_openstack/: .gitignore  .pylintrc  .stestr.conf  pylint.rc  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/: utils.py
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/common/: constants.py
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/helm/: __init__.py  aodh.py  barbican.py  ceilometer.py  cinder.py  clients.py  dcdbsync.py  fm_rest_api.py  garbd.py  glance.py  gnocchi.py  heat.py  horizon.py  ingress-nginx.py  ingress.py  ingress_nginx_openstack.py  keystone.py  keystone_api_proxy.py  libvirt.py  mariadb.py  memcached.py  neutron.py  nginx_ports_control.py  nova.py  nova_api_proxy.py  openstack.py  openvswitch.py  pci_irq_affinity_agent.py  placement.py  prometheus_openstack_exporter.py  psp_rolebinding.py  rabbitmq.py  swift.py
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/helpers/: ldap.py
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/kustomize/: kustomize_openstack.py
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/lifecycle/: lifecycle_openstack.py
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/tests/: __init__.py  test_kustomize_openstack.py  test_nova_api_proxy.py  test_plugins.py
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/tests/helm/: test_aodh.py  test_barbican.py  test_ceilometer.py  test_cinder.py  test_cinder_esb.py  test_clients.py  test_fm_rest_api.py  test_glance.py  test_gnocchi.py  test_heat.py  test_horizon.py  test_ironic.py  test_keystone.py  test_keystone_api_proxy.py  test_neutron.py  test_nova.py  test_nova_api_proxy.py  test_openstack.py  test_placement.py  test_rabbitmq.py
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/tests/lifecycle/: test_lifecycle_openstack.py
python3-k8sapp-openstack/k8sapp_openstack/k8sapp_openstack/tests/utils/: test_utils.py
(+786 files in other folders)
