[metadata]
name = k8sapp-openstack
summary = StarlingX sysinv extensions for stx-openstack
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_openstack

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    stx-openstack = systemconfig.helm_plugins.stx_openstack

systemconfig.helm_plugins.stx_openstack =
    001_ingress = k8sapp_openstack.helm.ingress:IngressHelm
    002_mariadb = k8sapp_openstack.helm.mariadb:MariadbHelm
    003_garbd = k8sapp_openstack.helm.garbd:GarbdHelm
    004_rabbitmq = k8sapp_openstack.helm.rabbitmq:RabbitmqHelm
    005_memcached = k8sapp_openstack.helm.memcached:MemcachedHelm
    006_keystone = k8sapp_openstack.helm.keystone:KeystoneHelm
    007_heat = k8sapp_openstack.helm.heat:HeatHelm
    008_horizon = k8sapp_openstack.helm.horizon:HorizonHelm
    009_glance = k8sapp_openstack.helm.glance:GlanceHelm
    010_openvswitch = k8sapp_openstack.helm.openvswitch:OpenvswitchHelm
    011_libvirt = k8sapp_openstack.helm.libvirt:LibvirtHelm
    012_neutron = k8sapp_openstack.helm.neutron:NeutronHelm
    013_nova = k8sapp_openstack.helm.nova:NovaHelm
    014_nova-api-proxy = k8sapp_openstack.helm.nova_api_proxy:NovaApiProxyHelm
    015_cinder = k8sapp_openstack.helm.cinder:CinderHelm
    016_gnocchi = k8sapp_openstack.helm.gnocchi:GnocchiHelm
    017_ceilometer = k8sapp_openstack.helm.ceilometer:CeilometerHelm
    018_panko = k8sapp_openstack.helm.panko:PankoHelm
    019_aodh = k8sapp_openstack.helm.aodh:AodhHelm
    020_openstack-helm-toolkit = k8sapp_openstack.helm.helm_toolkit:HelmToolkitHelm
    021_barbican = k8sapp_openstack.helm.barbican:BarbicanHelm
    022_keystone-api-proxy = k8sapp_openstack.helm.keystone_api_proxy:KeystoneApiProxyHelm
    023_ceph-rgw = k8sapp_openstack.helm.swift:SwiftHelm
    024_ironic = k8sapp_openstack.helm.ironic:IronicHelm
    025_placement = k8sapp_openstack.helm.placement:PlacementHelm
    026_nginx-ports-control = k8sapp_openstack.helm.nginx_ports_control:NginxPortsControlHelm
    027_fm-rest-api = k8sapp_openstack.helm.fm_rest_api:FmRestApiHelm
    028_dcdbsync = k8sapp_openstack.helm.dcdbsync:DcdbsyncHelm
    029_openstack-psp-rolebinding = k8sapp_openstack.helm.psp_rolebinding:PSPRolebindingHelm

systemconfig.armada.manifest_ops =
    stx-openstack = k8sapp_openstack.armada.manifest_openstack:OpenstackArmadaManifestOperator

[wheel]
universal = 1
